--- a/client/src/components/VideoQue/video-que-style.scss
+++ b/client/src/components/VideoQue/video-que-style.scss
@@ -1,6 +1,110 @@
-.videotile {
+@use '../style/variables.scss' as *;
+@use '../style/mixins.scss' as *;
 
-    &-preview{
-        max-width: 200px;
+.videoque {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    padding: 0 2rem;
+
+    &__heading {
+        font-size: 3rem;
+        margin: 0;
+        color: $cta;
+        width: 100%;
+        padding: 2rem 2rem;
+        border: 2px solid $text;
+        border-radius: 5rem;
+        margin-top: 2rem;
+        box-sizing: border-box;
+        max-width: 500px;
+
+        @include tablet {
+            font-size: 5rem;
+            margin: 2rem 10rem 0;
+        }
+
+        @include desktop {
+            max-width: 1000px;
+            margin: 2rem 25rem 0;
+        }
     }
+
+    &__videotile {
+       box-sizing: border-box;
+       margin: 2rem 0rem;
+       max-width: 100%;
+       background-color: $background-light;
+       border-radius: 2rem;
+       border: 2px solid $text;
+
+       @include tablet {
+           max-width: 500px;
+           margin: 2rem 2rem;
+       }
+
+        &-preview {
+            max-width: 100%;
+            border-radius: 1.75rem;
+        }
+
+        &-textcontainer {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 1rem;
+
+            @include tablet {
+                justify-content: flex-end;
+            }
+        }
+
+        &-user {
+            font-size: 1.5rem;
+            color: $cta;
+            margin: 0;
+            padding: 0.5rem 1rem;
+            text-align: left;
+
+            @include tablet {
+                flex: 1;
+            }
+        }
+
+        &-date {
+            font-size: 1.2rem;
+            color: $text;
+            display: none;
+        }
+
+        &-button {
+            margin: 0 1rem;
+            background-color: $cta;
+            color: $text;
+            outline: none;
+            border: none;
+            padding: 1rem 2rem;
+            border-radius: 2.5rem;
+
+            &:hover {
+                background-color: $cta-hover;
+            }
+
+            &:last-child {
+                display: none;
+            }
+
+            @include tablet {
+                &:last-child {
+                    display: inline-block;
+                }
+            }
+        }
+
+    }
+}
+
+.hideuser {
+    display: none;
 }
