--- a/client/src/components/Upload/upload-style.scss
+++ b/client/src/components/Upload/upload-style.scss
@@ -1,9 +1,126 @@
-.video {
-    &-thumbnail {
-        max-width: 300px;
+@use '../style/variables.scss' as *;
+@use '../style/mixins.scss' as *;
+
+.upload {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+    &__form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &-input {
+            z-index: 1;
+            opacity: 0;
+            box-sizing: border-box;
+            height: 100%;
+
+            &-container {
+                width: 250px;
+                height: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                margin: 1rem 0;
+
+                & button {
+                    width: 250px;
+                    height: 30px;
+                    position: absolute;
+                    background-color: $cta;
+                    color: $text;
+                    outline: none;
+                    border: none;
+                    padding: 1rem 1rem;
+                    border-radius: 2.5rem;
+
+                    @include tablet {
+                        width: 120px;
+                    }
+
+                    &:hover {
+                        background-color: $cta-hover;
+                    }
+                }
+            }
+        }
+
+        &-label {
+            color: $text;
+            font-size: 1.3rem;
+        }
+
+        &-radio {
+            background-color: $highenergy;
+            color: red;
+        }
+
+        &-button {
+            width: 90px;
+            margin: 1rem 1rem;
+            background-color: $cta;
+            color: $text;
+            outline: none;
+            border: none;
+            padding: 1rem 1rem;
+            border-radius: 2.5rem;
+
+            @include tablet {
+                width: 120px;
+                margin: 0.5rem 3rem;
+            }
+
+            &:hover {
+                background-color: $cta-hover;
+            }
+        }
     }
 
-    &-preview {
-        max-width: 300px;
+    &__button {
+        width: 150px;
+        margin: 1rem 1rem;
+        background-color: $cta;
+        color: $text;
+        outline: none;
+        border: none;
+        padding: 1rem 1rem;
+        border-radius: 2.5rem;
+
+        &:hover {
+            background-color: $cta-hover;
+        }
+    }
+
+
+
+    &__thumbnail {
+        padding: 1rem;
+        width: 90%;
+        max-width: 600px;
+        border-radius: 2rem;
+    }
+
+    &__preview {
+        width: 90%;
+        max-width: 600px;
+        border-radius: 1rem;
+
+        &-container {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            @include desktop {
+                flex-direction: row;
+            }
+        }
     }
 }
