--- a/client/src/components/VideoPlayer/video-player-style.scss
+++ b/client/src/components/VideoPlayer/video-player-style.scss
@@ -1,18 +1,275 @@
-.videoplayer {
+@use '../style/variables.scss' as *;
+@use '../style/mixins.scss' as *;
 
-    &-container {
-        position: relative;
-        width: 40%;
-    }
+.player {
+    display: flex;
+    position: relative;
 
-    &-one {
+    &__one {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        &-video {
+            width: 90%;
+            max-width: 600px;
+            border-radius: 1rem;
+
+            @include tablet {
+                max-width: 800px;
+            }
+        }
+
+        &-controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+
+            &-label {
+                color: $text;
+                font-size: 1.3rem;
+            }
+
+            &-slider {
+                -webkit-appearance: none;
+                width: 100%;
+                max-width: 475px;
+                height: 35px;
+                outline: none;
+                background: $text;
+                border-radius: 2rem;
+                
+                &::-webkit-slider-thumb {
+                    -webkit-appearance: none;
+                    height: 35px;
+                    width: 16px;
+                    border-radius: 3px;
+                    background: $cta;
+                    cursor: pointer;
+                    box-shadow: 2px 2px 2px #000000;
+                  }
+
+                &::-moz-range-thumb {
+                    -webkit-appearance: none;
+                    height: 35px;
+                    width: 16px;
+                    border-radius: 3px;
+                    background: $cta;
+                    cursor: pointer;
+                    box-shadow: 2px 2px 2px #000000;
+                }
+            }
+
+            &-buttons {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+
+                @include tablet {
+                    justify-content: center;
+                }
+
+                & button {
+                    width: 90px;
+                    margin: 0.5 1rem;
+                    background-color: $cta;
+                    color: $text;
+                    outline: none;
+                    border: none;
+                    padding: 1rem 1rem;
+                    border-radius: 2.5rem;
+
+                    @include tablet {
+                        width: 120px;
+                        margin: 0.5rem 3rem;
+                    }
+        
+                    &:hover {
+                        background-color: $cta-hover;
+                    }
+                }
+            }
+        }
     }
 
-    &-two {
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
+    &__two {
+        display: none;
+        @include desktop {
+            display: unset;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+
+        &-video {
+            width: 90%;
+            max-width: 600px;
+            border-radius: 1rem;
+
+            @include tablet {
+                max-width: 800px;
+            }
+        }
+
+        &-controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+
+            &-label {
+                color: $text;
+                font-size: 1.3rem;
+            }
+
+            &-slider {
+                -webkit-appearance: none;
+                width: 100%;
+                max-width: 475px;
+                height: 35px;
+                outline: none;
+                background: $text;
+                border-radius: 2rem;
+                
+                &::-webkit-slider-thumb {
+                    -webkit-appearance: none;
+                    height: 35px;
+                    width: 16px;
+                    border-radius: 3px;
+                    background: $cta;
+                    cursor: pointer;
+                    box-shadow: 2px 2px 2px #000000;
+                  }
+
+                &::-moz-range-thumb {
+                    -webkit-appearance: none;
+                    height: 35px;
+                    width: 16px;
+                    border-radius: 3px;
+                    background: $cta;
+                    cursor: pointer;
+                    box-shadow: 2px 2px 2px #000000;
+                }
+            }
+
+            &-buttons {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+
+                @include tablet {
+                    justify-content: center;
+                }
+
+                & button {
+                    width: 90px;
+                    margin: 0.5 1rem;
+                    background-color: $cta;
+                    color: $text;
+                    outline: none;
+                    border: none;
+                    padding: 1rem 1rem;
+                    border-radius: 2.5rem;
+
+                    @include tablet {
+                        width: 120px;
+                        margin: 0.5rem 3rem;
+                    }
+        
+                    &:hover {
+                        background-color: $cta-hover;
+                    }
+                }
+            }
+        }
     }
+
+    &__allControls {
+        display: none;
+        @include desktop {
+            display: unset;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 2rem;
+            width: 100%;
+        }
+
+        &-label {
+            color: $text;
+            font-size: 1.3rem;
+        }
+
+        &-buttons {
+            width: 100%;
+            display: flex;
+            max-width: 600px;
+            justify-content: center;
+
+            & button {
+                width: 90px;
+                margin: 0.5 1rem;
+                background-color: $cta;
+                color: $text;
+                outline: none;
+                border: none;
+                padding: 1rem 1rem;
+                border-radius: 2.5rem;
+
+                @include tablet {
+                    width: 120px;
+                    margin: 0.5rem 3rem;
+                }
+    
+                &:hover {
+                    background-color: $cta-hover;
+                }
+            }
+
+        }
+        &-slider {
+            -webkit-appearance: none;
+            width: 100%;
+            max-width: 475px;
+            height: 35px;
+            outline: none;
+            background: $text;
+            border-radius: 2rem;
+            
+            &::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                height: 35px;
+                width: 16px;
+                border-radius: 3px;
+                background: $cta;
+                cursor: pointer;
+                box-shadow: 2px 2px 2px #000000;
+              }
+
+            &::-moz-range-thumb {
+                -webkit-appearance: none;
+                height: 35px;
+                width: 16px;
+                border-radius: 3px;
+                background: $cta;
+                cursor: pointer;
+                box-shadow: 2px 2px 2px #000000;
+            }
+        }
+    }
+}
+
+.overlay {
+    position: absolute;
+}
+
+.hidden {
+    display: none;
 }
