--- a/client/src/components/VideoPlayer/video-player-style.scss
+++ b/client/src/components/VideoPlayer/video-player-style.scss
@@ -97,6 +97,7 @@
 
     &__two {
         display: none;
+        position: relative;
         @include desktop {
             display: unset;
             width: 100%;
@@ -263,11 +264,35 @@
                 box-shadow: 2px 2px 2px #000000;
             }
         }
+
+        &-overlay {
+            width: 90px;
+                margin: 0.5 1rem;
+                background-color: $cta;
+                color: $text;
+                outline: none;
+                border: none;
+                padding: 1rem 1rem;
+                border-radius: 2.5rem;
+
+                @include tablet {
+                    width: 120px;
+                    margin: 0.5rem 3rem;
+                }
+    
+                &:hover {
+                    background-color: $cta-hover;
+                }
+        }
     }
 }
 
 .overlay {
     position: absolute;
+}
+
+.relative {
+    position: relative;
 }
 
 .hidden {
